force-app/main/default/objects/Proof_of_Insurance__c/Proof_of_Insurance__c.object-meta.xml
<CustomObject>
    <description>Holds details relating to the proof of insurance document and property relating to a loan application</description>
    <label>Proof of Insurance</label>
    <nameField>
        <displayFormat>POID-{00000000}</displayFormat>
        <label>Proof of Insurance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proof of Insurance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>