force-app/main/default/objects/Proof_of_Insurance__c/fields/Document_File_Version__c.field-meta.xml
<CustomField>
    <fullName>Document_File_Version__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <description>Document file version for related Proof of Insurance</description>
    <label>Document File Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>