force-app/main/default/objects/Proof_of_Insurance__c/fields/Mortgage_Contract_ID__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Contract_ID__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <description>Mortgage Contract ID for related Proof of Insurance</description>
    <label>Mortgage Contract ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>