force-app/main/default/objects/Proof_of_Insurance__c/fields/Property_ID__c.field-meta.xml
<CustomField>
    <fullName>Property_ID__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <description>Property ID for related Proof of Insurance</description>
    <label>Property ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>