force-app/main/default/objects/Proof_of_Insurance__c/fields/Settlement_ID__c.field-meta.xml
<CustomField>
    <fullName>Settlement_ID__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <description>Related Settlement ID</description>
    <label>Settlement ID</label>
    <referenceTo>Settlement__c</referenceTo>
    <relationshipLabel>Proof of Insurance</relationshipLabel>
    <relationshipName>Proof_of_Insurance</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>