force-app/main/default/objects/Proof_of_Insurance__c/fields/Verified_By__c.field-meta.xml
<CustomField>
    <fullName>Verified_By__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <description>Verification user from the Settlement Domain</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Verified By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>