force-app/main/default/objects/Proof_of_Insurance__c/fields/Verified_On__c.field-meta.xml
<CustomField>
    <fullName>Verified_On__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <description>Date Verified from the Settlement Domain</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Verified On</label>
    <type>DateTime</type>
</CustomField>