force-app/main/default/objects/Proof_of_Insurance__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>The version of this loan</description>
    <label>Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>